# gbp-discord-bot

./: .gitignore  CMakeLists.txt  README.md  config.json  copypasta.json
src/: .gbp.h.swp  .main.cpp.swp  balances.txt  commands.cpp  gbp  gbp-leaderboard.py  gbp.cpp  gbp.h  main.cpp  notify.cpp
